<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_details">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        android:src="@drawable/bg1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgClose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_close"
        android:padding="5dp"
        android:src="@drawable/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mbold"
                android:text="@string/perkara"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/perkara"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mlight"
                android:text="..."
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/mbold"
                android:text="@string/nomor_psh"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/nomor_psh"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mlight"
                android:text="..."
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/mbold"
                android:text="@string/tanggal"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tanggal"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mlight"
                android:text="..."
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/mbold"
                android:text="@string/nama_terduga_pelanggar"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/nama_terduga_pelanggar"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mlight"
                android:text="..."
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/mbold"
                android:text="@string/pangkat"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/pangkat"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mlight"
                android:text="..."
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/mbold"
                android:text="@string/nrp"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/nrp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mlight"
                android:text="..."
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/mbold"
                android:text="@string/kesatuan"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/kesatuan"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mlight"
                android:text="..."
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/mbold"
                android:text="@string/pasal_dilanggar"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/pasal_dilanggar"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mlight"
                android:text="..."
                android:textColor="@color/colorWhite" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/mbold"
                android:text="@string/photo_vonis"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/photo_vonis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mlight"
                android:text="..."
                android:layout_marginBottom="16dp"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>