<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_details">

    <ImageView
        android:id="@+id/imgClose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_close"
        android:padding="5dp"
        android:src="@drawable/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgClose">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mbold"
                    android:text="@string/nama_pelaku"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/nama_pelaku"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mlight"
                    android:text="..."
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mbold"
                    android:text="@string/pangkat"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/pangkat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mlight"
                    android:text="..."
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mbold"
                    android:text="@string/nrp"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/nrp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mlight"
                    android:text="..."
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mbold"
                    android:text="@string/jabatan"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/jabatan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mlight"
                    android:text="..."
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mbold"
                    android:text="@string/kesatuan"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/kesatuan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mlight"
                    android:text="..."
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mbold"
                    android:text="@string/nama_pelapor"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/nama_pelapor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mlight"
                    android:text="..."
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mbold"
                    android:text="@string/alamat"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/alamat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mlight"
                    android:text="..."
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mbold"
                    android:text="@string/pasal_dilanggar"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/pasal_dilanggar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mlight"
                    android:text="..."
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mbold"
                    android:text="@string/no_laporan"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/no_laporan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mlight"
                    android:text="..."
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mbold"
                    android:text="@string/tgl_laporan"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tgl_laporan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mlight"
                    android:text="..."
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mbold"
                    android:text="@string/no_berkas_laporan"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/no_berkas_laporan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mlight"
                    android:text="..."
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mbold"
                    android:text="@string/nomor_psh"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/nomor_psh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mlight"
                    android:text="..."
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mbold"
                    android:text="@string/tgl_sidang"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tgl_sidang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mlight"
                    android:text="..."
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mbold"
                    android:text="@string/isi_putusan"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/isi_putusan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mlight"
                    android:text="..."
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mbold"
                    android:text="@string/isi_banding"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/isi_banding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mlight"
                    android:text="..."
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mbold"
                    android:text="@string/photo_vonis"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/photo_vonis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mlight"
                    android:text="..."
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mbold"
                    android:text="Photo Putusan"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/photo_putusan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mlight"
                    android:text="..."
                    android:textColor="@color/colorWhite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mbold"
                    android:text="Photo Surat"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/photo_surat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/mlight"
                    android:text="..."
                    android:textColor="@color/colorWhite" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>