<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_details">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        android:src="@drawable/bg1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgClose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_close"
        android:padding="5dp"
        android:src="@drawable/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mbold"
                android:text="@string/pilih_peraturan"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/pilih_peraturan"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mlight"
                android:text="..."
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/mbold"
                android:text="@string/nomor_peraturan"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/nomor_peraturan"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mlight"
                android:text="..."
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/mbold"
                android:text="@string/tgl_penetapan"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tgl_penetapan"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mlight"
                android:text="..."
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/mbold"
                android:text="@string/tgl_pengesahan"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tgl_pengesahan"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mlight"
                android:text="..."
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/mbold"
                android:text="@string/nama_pejabat_tanda_tangan"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/nama_pejabat_tanda_tangan"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mlight"
                android:text="..."
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/mbold"
                android:text="@string/no_register"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/no_register"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mlight"
                android:text="..."
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/mbold"
                android:text="@string/tentang"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tentang"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mlight"
                android:text="..."
                android:textColor="@color/colorWhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/mbold"
                android:text="@string/upload_document"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/upload_document"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mlight"
                android:text="..."
                android:textColor="@color/colorWhite"
                android:layout_marginBottom="8dp"/>
        </LinearLayout>
    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>